--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ espy_pdfier.egg-info/SOURCES.txt
 espy_pdfier.egg-info/requires.txt
 espy_pdfier.egg-info/PKG-INFO
 espy_pdfier.egg-info/dependency_links.txt
+.env
